--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <h1>betterGoogle</h1>
 <p>Powered by Google Programmable Search.</p>
-<p>Currently SafeSearch is toggled off. There will be an option to toggle it soon™️</p>
-<script async src="https://cse.google.com/cse.js?cx=b01cce44f84a0497e">
+<button onclick="ssToggle()">SafeSearch: Off</button>
+<script id="noss" async src="https://cse.google.com/cse.js?cx=b01cce44f84a0497e">
 </script>
-<div class="gcse-search"></div>
+<script>
+  function ssToggle() {
+  const skibidi = document.getElementById("noss");
+    skibidi.delete()
+var safeSearch = document.createElement('script');
+
+safeSearch.setAttribute('src','https://cse.google.com/cse.js?cx=913c33aaf2e9e410b);
+
+document.head.appendChild(safeSearch);
+    </script>
