--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>betterGoogle</h1>
 <p>Powered by Google Programmable Search.</p>
-<button onclick="ssToggle()">SafeSearch: Off</button>
+<button onclick="ssToggle()">SafeSearch</button>
 <script id="noss" async src="https://cse.google.com/cse.js?cx=b01cce44f84a0497e">
 </script>
 <script>
@@ -9,7 +9,7 @@
     skibidi.delete()
 var safeSearch = document.createElement('script');
 
-safeSearch.setAttribute('src','https://cse.google.com/cse.js?cx=913c33aaf2e9e410b);
+safeSearch.setAttribute('https://cse.google.com/cse.js?cx=913c33aaf2e9e410b');
 
 document.head.appendChild(safeSearch);
-    </script>
+</script>
