--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>betterGoogle</h1>
 <p>Powered by Google Programmable Search.</p>
 <button onclick="ssToggle()">SafeSearch</button>
-<script id="noss" async src="https://cse.google.com/cse.js?cx=b01cce44f84a0497e">
+<script async src="https://cse.google.com/cse.js?cx=b01cce44f84a0497e">
 </script>
 <script>
   function ssToggle() {
