--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <h1>betterGoogle</h1>
 <p>Powered by Google Programmable Search.</p>
-<button onclick="ssToggle()">SafeSearch</button>
-<script async src="https://cse.google.com/cse.js?cx=b01cce44f84a0497e">
+<script async src="https://cse.google.com/cse.js?cx=913c33aaf2e9e410b">
 </script>
-<script>
-  function ssToggle() {
-  const skibidi = document.getElementById("noss");
-    skibidi.delete()
-var safeSearch = document.createElement('script');
-
-safeSearch.setAttribute('https://cse.google.com/cse.js?cx=913c33aaf2e9e410b');
-
-document.head.appendChild(safeSearch);
-</script>
+<div class="gcse-search"></div>
