--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>betterGoogle</h1>
 <p>Powered by Google Programmable Search.</p>
-<meta http-equiv="refresh" content="0; url=down.html" />
+<meta http-equiv="refresh" content="0; url=https://google.com/404" />
 <script async src="https://cse.google.com/cse.js?cx=913c33aaf2e9e410b">
 </script>
 <div class="gcse-search"></div>
